chore: fix word wrapping

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -290,6 +290,7 @@ body.no-overflow {
     color: currentColor;
     font-size: 1.125rem;
     text-transform: uppercase;
+    word-break: break-word;
 }
 
 .partners-section {
